--- a/src/mockup/index.html
+++ b/src/mockup/index.html
@@ -19,14 +19,14 @@
    <div class="container">
 
       <section class="row masthead">
+         <div class="col-sm-5">
+            <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x100"
+               alt="placeholder">
+         </div>
          <header class="col-sm-7">
             <h2 class="header-name text-center">XYZ Market Research</h2>
             <h4 class="sub-header-title text-center">Survey Tool</h4>
          </header>
-         <div class="col-sm-5">
-            <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x200"
-               alt="placeholder">
-         </div>
       </section>
 
       <section class="row navi-row">
@@ -53,6 +53,7 @@
                   <thead>
                      <tr>
                         <th>Survey Name</th>
+                        <th>Survey ID</th>
                         <th>Survey Status</th>
                         <th>Date Created</th>
                         <th>Last Modified</th>
@@ -65,21 +66,27 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <th scope="row">Cheeses</th>
+                        <td>123456</td>
+                        <td>In Review</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
+                        <td>11/2/2016</td>
                      </tr>
                      <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <th scope="row">Movies</th>
+                        <td>234567</td>
+                        <td>Design</td>
+                        <td>11/4/2016</td>
                      </tr>
                      <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
+                        <th scope="row">Books</th>
+                        <td>13579</td>
+                        <td>Ready to Publish</td>
                         <td>@twitter</td>
                      </tr>
                  </tbody>
