--- a/src/mockup/index.html
+++ b/src/mockup/index.html
@@ -19,14 +19,17 @@
    <div class="container">
 
       <section class="row masthead">
-         <div class="col-sm-5">
-            <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x100"
-               alt="placeholder">
-         </div>
-         <header class="col-sm-7">
+         <div class="col-sm-6">
+            <div class="col-sm-4">
+               <img class="img-responsive img-rounded center-block" src="http://placehold.it/200x100"
+                  alt="placeholder">
+            </div>
+            <header class="col-sm-8">
             <h2 class="header-name text-center">XYZ Market Research</h2>
             <h4 class="sub-header-title text-center">Survey Tool</h4>
          </header>
+         </div>
+         
       </section>
 
       <section class="row navi-row">
@@ -40,7 +43,7 @@
                </li>
             </ul>
          </nav>
-         <div class="col-sm-5 text-center creation-buttons">
+         <div class="col-sm-5 text-right creation-buttons">
             <a class="btn btn-success" href="html/surveyCreator.html">New Survey</a>
          </div>
       </section>
@@ -49,7 +52,7 @@
 
          <section id="home" class="tab-pane active row">
             <div class="col-sm-12">
-               <table class="table table-striped">
+               <table class="table table-striped" style="border: 1px solid lightgrey;">
                   <thead>
                      <tr>
                         <th>Survey Name</th>
@@ -70,24 +73,51 @@
                         <td>123456</td>
                         <td>In Review</td>
                         <td>11/2/2016</td>
-                        <td>11/2/2016</td>
-                        <td>11/2/2016</td>
-                        <td>11/2/2016</td>
-                        <td>11/2/2016</td>
-                        <td>11/2/2016</td>
-                        <td>11/2/2016</td>
+                        <td>11/3/2016</td>
+                        <td>@johndoe</td>
+                        <td>n/a</td>
+                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="./img/edit.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25"src="./img/delete.png" />
+                        </td>
                      </tr>
                      <tr>
                         <th scope="row">Movies</th>
-                        <td>234567</td>
-                        <td>Design</td>
-                        <td>11/4/2016</td>
+                        <td>123456</td>
+                        <td>Reviewed Needs Modifications</td>
+                        <td>11/2/2016</td>
+                        <td>11/3/2016</td>
+                        <td>@johndoe</td>
+                        <td>n/a</td>
+                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="./img/edit.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25"src="./img/delete.png" />
+                        </td>
                      </tr>
                      <tr>
                         <th scope="row">Books</th>
-                        <td>13579</td>
-                        <td>Ready to Publish</td>
-                        <td>@twitter</td>
+                        <td>123456</td>
+                        <td>Ready to Deploy</td>
+                        <td>11/2/2016</td>
+                        <td>11/3/2016</td>
+                        <td>@johndoe</td>
+                        <td>n/a</td>
+                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="./img/edit.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25"src="./img/delete.png" />
+                        </td>
                      </tr>
                  </tbody>
                </table>
