added pictures to the homepage  functionality will be split up in subsequent edits

--- a/src/mockup/html/surveyDesigner.html
+++ b/src/mockup/html/surveyDesigner.html
@@ -75,8 +75,14 @@
                         <td>11/2/2016</td>
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
-                        <td>n/a</td>
-                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
+                  alt="placeholder"/>
+                        </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
                   alt="placeholder"/>
@@ -92,8 +98,14 @@
                         <td>11/2/2016</td>
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
-                        <td>n/a</td>
-                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
+                  alt="placeholder"/>
+                        </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
                   alt="placeholder"/>
@@ -109,8 +121,14 @@
                         <td>11/2/2016</td>
                         <td>11/3/2016</td>
                         <td>@johndoe</td>
-                        <td>n/a</td>
-                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
+                  alt="placeholder"/>
+                        </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
                   alt="placeholder"/>
@@ -126,8 +144,14 @@
                         <td>11/5/2016</td>
                         <td>11/7/2016</td>
                         <td>@johndoe</td>
-                        <td>n/a</td>
-                        <td>n/a</td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/analyze.png"
+                  alt="placeholder"/>
+                        </td>
+                        <td>
+                           <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/publish.png"
+                  alt="placeholder"/>
+                        </td>
                         <td>
                            <img class="img-responsive img-rounded center-block" width="25" height="25" src="../img/edit.png"
                   alt="placeholder"/>
